--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "3",
   "version": "1.0.0",
   "main": "server.js",
@@ -14,9 +15,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {},
   "repository": {
