--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "faker": "^5.4.0",
     "knex": "^2.3.0",
+    "mongoose": "^6.6.2",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
