--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.0",
     "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
@@ -22,6 +23,8 @@
     "mongoose": "^6.6.2",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
