--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.0",
     "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "faker": "^5.4.0",
     "knex": "^2.3.0",
+    "minimist": "^1.2.7",
     "mongoose": "^6.6.2",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
