--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB="mongodb+srv://Joaquin:BN633XKnqPfWKOmr@cluster0.wjqzet9.mongodb.net/eCommerce"
+adm2= "lcpfcyyikwamacmp"
+accSID="ACd389b4491ec3198c4b0f1ce140eb1d8c"
+authToken="f4b6b4889cf339787abd2163301caab5"
+SECRET="secret"
