--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "faker": "^5.4.0",
+    "formidable": "^2.0.1",
     "knex": "^2.3.0",
     "minimist": "^1.2.7",
     "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -33,6 +36,7 @@
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "sqlite3": "^5.0.11",
+    "twilio": "^3.83.3",
     "winston": "^3.8.2"
   },
   "repository": {
