Routing, DB and service changes

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 MONGODB="mongodb+srv://Joaquin:BN633XKnqPfWKOmr@cluster0.wjqzet9.mongodb.net/eCommerce"
-adm2= "lcpfcyyikwamacmp"
+MONGODBDEV="mongodb+srv://Joaquin:BN633XKnqPfWKOmr@cluster0.wjqzet9.mongodb.net/eCommerce"
+admMail="joaquinwienberg@gmail.com"
+adm2= "tcltmuloofhjmucl"
 accSID="ACd389b4491ec3198c4b0f1ce140eb1d8c"
-authToken="f4b6b4889cf339787abd2163301caab5"
+authToken="114e68ceed2742d2f3314e2605b592d4"
 SECRET="secret"
+MODE="prod"
