Routing, order and DB changes

--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 MONGODB="mongodb+srv://Joaquin:BN633XKnqPfWKOmr@cluster0.wjqzet9.mongodb.net/eCommerce"
 MONGODBDEV="mongodb+srv://Joaquin:BN633XKnqPfWKOmr@cluster0.wjqzet9.mongodb.net/eCommerce"
-admMail="joaquinwienberg@gmail.com"
-adm2= "tcltmuloofhjmucl"
-accSID="ACd389b4491ec3198c4b0f1ce140eb1d8c"
-authToken="114e68ceed2742d2f3314e2605b592d4"
+admMail="gainster.lee@gmail.com"
+adm2= "asbganatqhcctnun"
 SECRET="secret"
 MODE="prod"
